fix:签到页面URL统一改成/checkin，页面标题修改为午安账号

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>wuanlife_oidc_webapp</title>
+    <title>午安账号</title>
   </head>
   <body>
     <div id="app"></div>
